lab-pod-busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: busybox
  name: busybox
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sh","-c","sleep 3600"]
