nginx-deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: nginx
    tier: front
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      tier: front
  template:
    metadata:
      labels:
        app: nginx
        tier: front
    spec:
      containers:
      - image: "1.14"
        name: nginx
        ports:
        - containerPort: 80
